<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bruno.iair.activities.EventsDataActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/iAirToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/citySensorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="0" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioEvent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/layoutFire"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/fire" />

                    <RadioButton
                        android:id="@+id/radioButtonFire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Fire"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/layoutFlood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/flood" />

                    <RadioButton
                        android:id="@+id/radioButtonFlood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Flood"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/layoutEarthquake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/earthquake" />

                    <RadioButton
                        android:id="@+id/radioButtonEarthQuake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Earthquake"
                        android:textIsSelectable="false"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/layoutTsunami"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/tsunami" />

                    <RadioButton
                        android:id="@+id/radioButtonTsunami"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Tsunami"
                        android:textSize="9sp" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textViewOtherEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <EditText
                    android:id="@+id/editTextOtherEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:text="Other Event" />
            </LinearLayout>
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Message: " />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="250"
                android:maxLines="10"/>
        </LinearLayout>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Send" />



    </LinearLayout>
</LinearLayout>
