<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnBack"
        android:icon="?attr/homeAsUpIndicator"
        android:title="Item"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/btnSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"

...
