...
        android:title="Search"

        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/btnCity"
        android:icon="@drawable/ic_action_name"
        android:title="btnCity"
        app:showAsAction="always" />
</menu>
